# test-matrix-rust-sdk

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml  shell.nix
src/: cli.rs  config.rs  lib.rs  main.rs
