[package]
name = "test-matrix-rust-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.5.49", features = ["derive", "string"] }
confy = "1.0.0"
directories = "6.0.0"
matrix-sdk = { version = "0.14.0", features = ["sso-login"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2"
#tiny_http = "0.12"
